src/styles/ui/UserStatWithIcon.scss
@import "../theme";
@import "../views/CustomizeGameParameter";

.userbox {
  @extend .normalInput;
  @include center;
  display: grid;
  grid-template-columns: 1fr 4fr 1fr;
  background-color: rgb(0, 111, 166);
  width: 100%;
  border-radius: $borderRadius;
  height: 30%;
  margin-bottom: 10px;
  @media scrseen and (min-width: 1100px) {
    width: 20%;
  }
  cursor: default;
  &:hover {
    border: 2px solid transparent;
  }


}

.userbox-me {
  @extend .userbox;
  background-color: $turquise;
  border: 2px solid $textColor;
  // color: black;

}

.centered-column {
  @include center;
}

.button-label {
  @include center;
}

.notification-bubble {
  @include center;
  height: 35px;
  width: 35px;
  background-color: $inputblue;
  border-radius: 50%;
  border: solid $inputblue 1px;
  color: $textColor;
  padding: 2px 6px;
  position: relative;
  top: -60%;
  right: -70%;
  @media screen and (min-width: 1100px) {
    top: -60%;
    right: -70%;}

}

